<resources>
    <string name="app_name">ChaterBot</string>
    <string name="app_login">Log In</string>
    <string name="app_register">Register</string>
    <string name="app_record">Record</string>

    <string name="action_settings">Settings</string>

    <string name="btSend">Send</string>
    <string name="etMessage">Message...</string>
    <string name="tvText">Talk about something...</string>
    <string name="btLogin">Log In</string>
    <string name="etEmail">Enter your email</string>
    <string name="etPassword">Enter your password</string>
    <string name="btCreate">Create an account</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_showRecord">Show Record</string>
    <string name="etPasswordRepeat">Repeat your password</string>
</resources>
